fix Incorrect modal off-centre

--- a/matrix/yo/app-aycalc/styles/main.scss
+++ b/matrix/yo/app-aycalc/styles/main.scss
@@ -219,7 +219,7 @@ div.grid2x2, div.grid3x2, div.grid3x3, div.grid4x2 {
 
 .my-modal-content {
     padding: 10px;
-    max-width: 290px; //400px;
+    width: 290px; //400px;
     height: 200px;
     // height: 50%;
     // width: 50%;
